<resources>
    <string name="app_name">Multi Tools</string>
    <string name="app_desc" translatable="true">Multi Tools is a software created for android devices, in this application there are several kinds of digital tools which aim to assist human tasks in completing their tasks.</string>
    <string name="about_cp">Contact Person</string>
    <string name="bg_tvInputText">Input Text</string>
    <string name="bg_editText">Enter the text here</string>
    <string name="bg_button">Generate</string>
    <string name="bg_download">Download</string>
    <string name="cp_tvHeading">0</string>
    <string name="cpHeading">Degree:</string>
    <string name="cc_tvConvert">Convert</string>
    <string name="cc_tvResult">Result</string>
    <string name="discount">Discount (%)</string>
    <string name="input_discount">Input discount</string>
    <string name="dc_tvPrice">Price (Rp)</string>
    <string name="dc_etInput">Input price</string>
    <string name="dc_btnCalculate">Calculate</string>
    <string name="dc_Total">Total</string>
    <string name="fl_strobo">Strobo / Blink</string>
    <string name="fl_slideHigh">Slider high</string>
    <string name="fl_slightLow">Slider low</string>
    <string name="gc_tvChoosen">Choose the genarator:</string>
    <string name="gc_btnQR">QR Generator</string>
    <string name="gc_btnBar">Bar Generator</string>
    <string name="help_desc">If you find bugs or problems in the apps, you can tell the developer by sending a message to the email.</string>
    <string name="help_btnEmail">Click Here</string>
    <string name="desc_name">Our tools can help your daily task</string>
    <string name="main_TR">Text Recognition</string>
    <string name="main_descTR">Convert your images into text, with these tools you don\'t have to bother typing</string>
    <string name="main_ST">Speech Text</string>
    <string name="main_descST">Record your speech to text</string>
    <string name="main_BQ">Code Scanner</string>
    <string name="main_descBQ">Scan your barcode or QRcode</string>
    <string name="main_GN">Code Generator</string>
    <string name="main_descGN">Build your barcode or QRcode</string>
    <string name="main_SW">Stopwatch</string>
    <string name="main_descSW">Measure the length of your activity</string>
    <string name="main_CP">Compass</string>
    <string name="main_descCP">Compass is a navigational tool to determine the cardinal directions</string>
    <string name="main_FL">Flashlight</string>
    <string name="main_descFL">Light up the light around you</string>
    <string name="main_CC">Money Converter</string>
    <string name="main_descCC">Convert the value of your currency into Indonesian rupiah currency</string>
    <string name="main_DC">Discount Calculation</string>
    <string name="main_descDC">Calculate the price of your item after deducting the discount</string>
    <string name="main_IB">Index Body</string>
    <string name="main_descIB">Body index tool is a digital tool that is used to check the stability of body mass</string>
    <string name="pp_tvPrivacy">Privacy Policy</string>
    <string name="pp_descPrivacy" translatable="true">Privacy Policy
Andre Gunawan Tri Atmaja, Fahri Muhammad Daelami, Eva Alivatinnisa and Daniel Alexander Pakpahan built the Multi tools app as a Free app. This SERVICE is provided by them at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Multi Tools unless otherwise defined in this Privacy Policy.
&#160;
Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app
        &#160;

Google Play Services
Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
&#160;
Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

&#160;
Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

        &#160;
Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

        &#160;
Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        &#160;

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
        &#160;

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2021-07-07

        &#160;
Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at toolmulti3@gmail.com.

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="qrscan_btnScan">Scan Code</string>
    <string name="qrscan_Result">Result</string>
    <string name="qr_btnGenerate">QR code generator</string>
    <string name="st_tvResult">Result</string>
    <string name="ST_act">Speech your text</string>
    <string name="speech_start">Tap on mic to start</string>
    <string name="heading_cp">"Heading: "</string>
    <string name="degrees_cp">" degrees"</string>
    <string name="sw_timer">Timer</string>
    <string name="sw_btnStart">Start</string>
    <string name="sw_btnPause">Pause</string>
    <string name="sw_btnReset">Reset</string>
    <string name="sw_btnSaveLap">Save Lap</string>
    <string name="terms_title"><![CDATA[Terms & Conditions]]></string>
    <string name="pref_about">About</string>
    <string name="pref_aboutVersion">Version</string>
    <string name="pref_aboutUs">About</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_privacyPolicy">Privacy Policy</string>
    <string name="pref_privacyTerms">Terms &amp; Conditions</string>
    <string name="pref_help">Help</string>
    <string name="pref_helpContactDeveloper">Contact Developer</string>
    <string name="ui_mode1">Swipe Mode</string>
    <string name="ui_mode2">Scroll Mode</string>
</resources>