<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dalam"
    tools:context=".Tools.Bar_Generator">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/color_tvbackground"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/bg_tvInputText"
                android:textColor="@color/tvdalam_color"
                android:background="@color/background_tvdalam"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="12sp"
                android:hint="@string/bg_editText"
                android:inputType="textPersonName" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cdEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_border"
        android:onClick="barCodeButton"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/bg_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/cd_color" />

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button"
        app:srcCompat="?attr/actionBarDivider"
        android:contentDescription="todo" />

    <Button
        android:id="@+id/download1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/bg_download"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/cd_color"
        app:iconTint="#FFFFFF" />


</RelativeLayout>