<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dalam"
    android:orientation="vertical"
    tools:context=".Tools.Discount">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_tvbackground"
        android:layout_margin="3dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">
            <TextView
                android:id="@+id/teks1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/background_tvdalam"
                android:text="@string/dc_tvPrice"
                android:textColor="@color/tvdalam_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/teks1"
                android:textColor="@color/tvdalam_color"
                android:padding="10dp"
                android:textSize="12sp"
                android:inputType="textPersonName"
                android:hint="@string/dc_etInput"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        app:cardBackgroundColor="@color/color_tvbackground"
        android:layout_margin="3dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">
            <TextView
                android:id="@+id/teks2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:padding="10dp"
                android:background="@color/background_tvdalam"
                android:textColor="@color/tvdalam_color"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/teks2"
                android:ems="10"
                android:padding="10dp"
                android:textSize="12sp"
                android:inputType="textPersonName"
                android:hint="@string/input_discount" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cardView2"
        android:layout_marginTop="33dp"
        android:text="@string/dc_btnCalculate" />

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_tvbackground"
        android:layout_marginTop="33dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">
            <TextView
                android:id="@+id/teks3"
                android:background="@color/background_tvdalam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/dc_Total"
                android:textColor="@color/tvdalam_color"/>

            <TextView
                android:id="@+id/teks4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="12sp"
                android:textColor="@color/tvdalam_color" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
