<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dalam"
    tools:context=".Tools.Bar_Generator">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/color_tvbackground"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/bg_tvInputText"
                android:textColor="@color/tvdalam_color"
                android:background="@color/background_tvdalam"/>

            <EditText
                android:id="@+id/etInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/bg_editText"
                android:inputType="textPersonName"
                android:autofillHints="" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnGenerate"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="barCodeButton"
        android:text="@string/qr_btnGenerate"
        android:layout_below="@+id/cdEditText"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        />

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/ivOutput"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnGenerate"
        app:srcCompat="?attr/actionBarDivider"
        android:contentDescription="todo" />

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivOutput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/bg_download"
        android:textColor="@color/white"
        app:backgroundTint="@color/cd_color" />


</RelativeLayout>