<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dalam"
    tools:context=".Tools.Stopwatch">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_tvbackground"
        android:layout_margin="3dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sw_timer"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="@color/background_tvdalam"
                android:textColor="@color/tvdalam_color"/>
            <TextView
                android:id="@+id/textView"
                android:text="00:00:00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textSize="50dp"
                android:textStyle="bold"
                android:textColor="@color/timeSW_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cdTimer"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/sw_btnStart"
        android:textColor="@color/white"
        app:backgroundTint="@color/cd_color" />
    <Button
        android:id="@+id/button2"
        android:text="@string/sw_btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_border"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/button3"
        android:text="@string/sw_btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/button4"
        android:text="@string/sw_btnSaveLap"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_border"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"/>
    <ListView
        android:id="@+id/listview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button4"
        android:background="@color/color_tvbackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:padding="5dp" />
</RelativeLayout>