<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dalam"
    tools:context=".Helper.GN_CodeOption">


    <androidx.cardview.widget.CardView
        android:id="@+id/cdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/color_tvbackground"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tvdalam"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@color/tvdalam_color"
                android:text="@string/gc_tvChoosen"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:paddingLeft="18dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/qrcode" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/barcode"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


    <Button
        android:id="@+id/btnQR"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        android:text="@string/gc_btnQR" />

    <Button
        android:id="@+id/btnBar"
        android:layout_marginLeft="15dp"
        android:text="@string/gc_btnBar"
        android:layout_width="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:layout_marginEnd="5dp"
        app:backgroundTint="@color/cd_color"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>